# Jade-programming-lang

./: .gitignore  CHANGELOG.md  README.md  package.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: pages.yml  release.yml
bootstrap/: README.md  run.ps1  stage0_hello.jdl  stage0_stats.jdl
docs/: CONTRIBUTING.md  PROJECT_STRUCTURE.md  README.md
jade-lang/: Cargo.toml  README.md  build.rs
jade-lang/.cargo/: config.toml
jade-lang/docs-site/: README.md  feedback.js  forums.js  styles.css
jade-lang/docs-site/docs/: feedback.html  forums.html
jade-lang/installers/: README.md
jade-lang/installers/android/: README.md  build-termux.sh
jade-lang/installers/ide/: README.md
jade-lang/installers/ide/vscode-snippet/: extension.js  language-configuration.json  package.json
jade-lang/installers/ide/vscode-snippet/syntaxes/: jade.tmLanguage.json
jade-lang/installers/linux/: build-all-linux.sh  build-appimage.sh  build-deb.sh  build-rpm.sh  build-with-cross.ps1  install.sh  jade.xml
jade-lang/installers/macos/: build-all-macos.sh  build-dmg.sh  build-pkg.sh  install.sh
jade-lang/installers/mime/: README.md
jade-lang/installers/windows/: build-aarch64-with-vs.ps1  build-all-windows.ps1  build-exe.ps1  build-msi.ps1  build-portable.ps1  install.ps1  jade-setup.iss  jade.wxs  register-jade-icon.ps1
jade-lang/installers/windows/icon/: README.md
jade-lang/installers/windows/install-extras/: BUILD.txt  LICENSE.txt  NEWS.txt  install-ide-extension.ps1
jade-lang/installers/windows/install-extras/Doc/: CHANGELOG.txt  QUICKSTART.txt  README.txt  SYNTAX.txt
jade-lang/installers/windows/install-extras/Lib/: README.txt  examples.jdl  prelude.jdl
jade-lang/installers/windows/install-extras/Scripts/: README.txt  jade_idle.bat  jade_repl.bat  run_jdl.bat
jade-lang/src/: compiler.rs  error.rs  jit.rs  jolt.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs
jade-lang/src/interpreter/: call.rs  crypto.rs  eval.rs  eval_conditionals.rs  eval_control.rs  eval_out.rs  eval_primitive.rs  mod.rs  value.rs
jade-lang/src/interpreter/builtins/: algo.rs  bits.rs  core.rs  counter.rs  crypto.rs  dsa.rs  enum_builtins.rs  io.rs  math.rs  memo.rs  mod.rs  numeric.rs  random.rs  regex_builtins.rs  stats.rs  string.rs  trie.rs  uf.rs  variables.rs
jade-lang/tests/fixtures/: README.md  test_core_math.jdl  test_dict.jdl  test_easy.jdl  test_hard.jdl  test_list_builtins.jdl  test_list_comprehension.jdl  test_medium.jdl  test_string_builtins.jdl
jade-lang/tests/integration/: basic_types.rs  stellar_dungeon.rs
