[package]
name = "j-lang"
version = "1.0.0"
edition = "2021"
authors = ["Jade Language Team"]
build = "build.rs"
description = "Jade Programming Language - A modern, safe, fast, and productive language"
license = "MIT"
repository = "https://github.com/j-lang/j"
keywords = ["programming-language", "compiler", "jit", "interpreter"]
categories = ["development-tools", "compilers"]

[[bin]]
name = "jade"
path = "src/main.rs"

[[test]]
name = "basic_types"
path = "tests/integration/basic_types.rs"

[[test]]
name = "stellar_dungeon"
path = "tests/integration/stellar_dungeon.rs"

[dependencies]
# Regex (optional)
regex = { version = "1.10", optional = true }
# Optional (only enabled with "full" / default)
clap = { version = "4.0", features = ["derive"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
toml = { version = "0.8", optional = true }
dirs = { version = "5.0", optional = true }
sha2 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
rand = { version = "0.8", optional = true }
uuid = { version = "1.0", features = ["v4"], optional = true }
base64 = { version = "0.21", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
aes-gcm = { version = "0.10", optional = true }
ed25519-dalek = { version = "2.0", features = ["rand_core"], optional = true }
x25519-dalek = { version = "2.0", features = ["static_secrets"], optional = true }
hkdf = { version = "0.12", optional = true }
argon2 = { version = "0.5", optional = true }
subtle = { version = "2.5", optional = true }
# LLVM dependencies for compilation (optional)
inkwell = { version = "0.4", features = ["llvm10-0"], optional = true }
# JIT dependencies (optional)
cranelift = { version = "0.95", optional = true }
cranelift-jit = { version = "0.95", optional = true }
cranelift-module = { version = "0.95", optional = true }
target-lexicon = { version = "0.12", optional = true }
# File watching for hot reload (optional)
notify = { version = "6.0", optional = true }
# Async runtime (optional)
tokio = { version = "1.0", features = ["full"], optional = true }
# HTTP client for fetch_text / fetch_json
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }

[build-dependencies]
winres = "0.1"

[features]
default = ["full"]
full = [
  "regex", "clap", "serde", "serde_json", "toml", "dirs",
  "sha2", "hmac", "rand", "uuid", "base64",
  "chacha20poly1305", "aes-gcm", "ed25519-dalek", "x25519-dalek", "hkdf", "argon2", "subtle",
  "reqwest"
]
llvm = ["inkwell"]
jit = ["cranelift", "cranelift-jit", "cranelift-module", "target-lexicon", "notify"]
async = ["tokio"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true